RESOLVED FIXED280738
Fix smart pointer warnings in DrawControlPart::apply
https://bugs.webkit.org/show_bug.cgi?id=280738
Summary Fix smart pointer warnings in DrawControlPart::apply
Ryosuke Niwa
Reported 2024-10-01 22:27:26 PDT
https://commits.webkit.org/284531@main fixed member variable warning but introduced uncounted call argument warnings.
Attachments
Ryosuke Niwa
Comment 1 2024-10-01 22:37:29 PDT
EWS
Comment 2 2024-10-02 00:11:36 PDT
Committed 284548@main (a14f55c42bb5): <https://commits.webkit.org/284548@main> Reviewed commits have been landed. Closing PR #34560 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-02 00:12:15 PDT
Note You need to log in before you can comment on or make changes to this bug.