Fix smart pointer warnings in DrawControlPart::apply https://bugs.webkit.org/show_bug.cgi?id=280738

Reviewed by Wenson Hsieh and Andy Estes.

284531@main fixed member variable warning but introduced uncounted call argument warnings
in DrawControlPart::apply because ControlPart::setOverrideControlFactory is now
considered non-trivial as it's no longer inlined.

Inline ControlPart::setOverrideControlFactory in the header to make it trivial again.

* Source/WebCore/platform/graphics/controls/ControlPart.cpp:
(WebCore::ControlPart::setOverrideControlFactory): Deleted.
* Source/WebCore/platform/graphics/controls/ControlPart.h:
(WebCore::ControlPart::setOverrideControlFactory):

Canonical link: https://commits.webkit.org/284548@main